--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/express-serve-static-core": "^4.17.29",
+    "@types/lodash": "^4.14.182",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "helmet": "^5.1.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.4.4"
   }
 }
