--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "@types/express-serve-static-core": "^4.17.29",
     "@types/lodash": "^4.14.182",
+    "@types/mongoose": "^5.11.97",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
+    "envalid": "^7.3.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "helmet": "^5.1.0",
