--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "src/server.js",
   "scripts": {
     "start": "nodemon src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll",
+    "test-coverage": "nyc npm test"
   },
   "author": "Franklin G. Wagbara",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.0.5",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
+    "nyc": "^15.1.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
