--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon src/server.ts",
+    "start": "node src/server.js",
+    "build": "tsc",
+    "dev": "nodemon src/server.ts",
     "test": "jest --watchAll",
     "test-coverage": "nyc npm test"
   },
