--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "build": "tsc",
+    "start": "node build/server.js",
+    "postinstall": "tsc",
     "dev": "nodemon src/server.ts",
     "test": "jest --watchAll",
     "test-coverage": "nyc npm test"
