--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node build/server.js",
-    "postinstall": "tsc",
+    "build": "tsc",
     "dev": "nodemon src/server.ts",
     "test": "jest --watchAll",
     "test-coverage": "nyc npm test"
