--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "node build/server.js",
+    "start": "node build/src/server.js",
     "build": "tsc",
     "dev": "nodemon src/server.ts",
     "test": "jest --watchAll",
